style(ContextSourceBox.module.scss): add styles to hide text and prevent overflow for better visual presentation

--- a/src/components/source/context_source_box/ContextSourceBox.module.scss
+++ b/src/components/source/context_source_box/ContextSourceBox.module.scss
@@ -20,6 +20,9 @@
     height: 48px !important;
     border-radius: theme.$box-border-radius;
     object-fit: cover;
+    overflow: hidden;
+    color: transparent;
+    text-indent: 10000px; 
 }
 
 .infos {
